{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 132,
  "lineage": "77c90dee-6ce8-3057-4a46-7ca0481d28e2",
  "resources": [
    {
      "module": "module.ecs_eu_west_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "romlab-ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:security-group/sg-0d9a5030b6cac0645",
            "description": "Security group for ECS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9a5030b6cac0645",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "71.183.150.118/32"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "romlab-ecsdemo-sg_name",
            "name_prefix": "",
            "owner_id": "000568877312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "romlab-ecscluster-sg"
            },
            "tags_all": {
              "Name": "romlab-ecscluster-sg",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_us_east_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "romlab-ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:security-group/sg-0fd084393517fe4a0",
            "description": "Security group for ECS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd084393517fe4a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "71.183.150.118/32"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "romlab-ecsdemo-sg_name",
            "name_prefix": "",
            "owner_id": "000568877312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "romlab-ecscluster-sg"
            },
            "tags_all": {
              "Name": "romlab-ecscluster-sg",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "romlab-main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:internet-gateway/igw-019c04a8d0e9d548c",
            "id": "igw-019c04a8d0e9d548c",
            "owner_id": "000568877312",
            "tags": {
              "Name": "romlab-ecsdemo-igw"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-igw",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "romlab-alb_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:loadbalancer/app/romlab-ecsdemo-alb/92be032b9d0ad900",
            "arn_suffix": "app/romlab-ecsdemo-alb/92be032b9d0ad900",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "romlab-ecsdemo-alb-1876719046.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:loadbalancer/app/romlab-ecsdemo-alb/92be032b9d0ad900",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "romlab-ecsdemo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01347e22a99a2a06a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08519f3513997fe79"
              },
              {
                "subnet_id": "subnet-0a09dd6323184d360"
              }
            ],
            "subnets": [
              "subnet-08519f3513997fe79",
              "subnet-0a09dd6323184d360"
            ],
            "tags": {
              "Name": "romlab-ecsdemo-alb"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-alb",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-0d8c13aae9fb659fe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_security_group.romlab-main_sg",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Default response",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:loadbalancer/app/romlab-ecsdemo-alb/92be032b9d0ad900",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_lb.romlab-alb_main",
            "module.network_eu_west_1.aws_security_group.romlab-main_sg",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_eu_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:targetgroup/romlab-ecsdemo-eu-tg/a77f178900f86371",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener-rule/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc/3c030d740762eec3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/eu*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener-rule/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc/3c030d740762eec3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc",
            "priority": 2,
            "tags": null,
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_lb.romlab-alb_main",
            "module.network_eu_west_1.aws_lb_listener.http",
            "module.network_eu_west_1.aws_lb_target_group.romlab-tg_eu",
            "module.network_eu_west_1.aws_security_group.romlab-main_sg",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_us_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:targetgroup/romlab-ecsdemo-us-tg/dadcddbd0c3c4821",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener-rule/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc/da2056b5ae8d0d31",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/us*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener-rule/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc/da2056b5ae8d0d31",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:listener/app/romlab-ecsdemo-alb/92be032b9d0ad900/98ead059bc5500bc",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_lb.romlab-alb_main",
            "module.network_eu_west_1.aws_lb_listener.http",
            "module.network_eu_west_1.aws_lb_target_group.romlab-tg_us",
            "module.network_eu_west_1.aws_security_group.romlab-main_sg",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "romlab-tg_eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:targetgroup/romlab-ecsdemo-eu-tg/a77f178900f86371",
            "arn_suffix": "targetgroup/romlab-ecsdemo-eu-tg/a77f178900f86371",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:targetgroup/romlab-ecsdemo-eu-tg/a77f178900f86371",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "romlab-ecsdemo-eu-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "romlab-tg_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:targetgroup/romlab-ecsdemo-us-tg/dadcddbd0c3c4821",
            "arn_suffix": "targetgroup/romlab-ecsdemo-us-tg/dadcddbd0c3c4821",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:000568877312:targetgroup/romlab-ecsdemo-us-tg/dadcddbd0c3c4821",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "romlab-ecsdemo-us-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_route",
      "name": "romlab-pub_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019c04a8d0e9d548c",
            "id": "r-rtb-0c08e235e027be5f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c08e235e027be5f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_internet_gateway.romlab-main_igw",
            "module.network_eu_west_1.aws_route_table.romlab-public_rt",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-019c04a8d0e9d548c",
            "id": "r-rtb-0c08e235e027be5f31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c08e235e027be5f3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_internet_gateway.romlab-main_igw",
            "module.network_eu_west_1.aws_route_table.romlab-public_rt",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "romlab-public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:route-table/rtb-0c08e235e027be5f3",
            "id": "rtb-0c08e235e027be5f3",
            "owner_id": "000568877312",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "romlab-ecsdemo-public-rt"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-public-rt",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "romlab-public_rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01517bdc15bc23774",
            "route_table_id": "rtb-0c08e235e027be5f3",
            "subnet_id": "subnet-0a09dd6323184d360"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_route_table.romlab-public_rt",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093bd9e80143e4abd",
            "route_table_id": "rtb-0c08e235e027be5f3",
            "subnet_id": "subnet-08519f3513997fe79"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_route_table.romlab-public_rt",
            "module.network_eu_west_1.aws_subnet.romlab-subnet-public",
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "romlab-main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:security-group/sg-01347e22a99a2a06a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01347e22a99a2a06a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241212045512499800000002",
            "name_prefix": "terraform-",
            "owner_id": "000568877312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "romlab-ecsdemo-alb-sg"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-alb-sg",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "romlab-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:subnet/subnet-042b978e4a4cf464c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.123.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042b978e4a4cf464c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-private-0"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-private-0",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:subnet/subnet-0f5b757d3d95ecf5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.143.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5b757d3d95ecf5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-private-1"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-private-1",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "romlab-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:subnet/subnet-0a09dd6323184d360",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a09dd6323184d360",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-public-0"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-public-0",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:subnet/subnet-08519f3513997fe79",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08519f3513997fe79",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-public-1"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-public-1",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-0d8c13aae9fb659fe"
          },
          "dependencies": [
            "module.network_eu_west_1.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_eu_west_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "romlab-main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].eu-west-1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:000568877312:vpc/vpc-0d8c13aae9fb659fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0cb8e6cad8394633d",
            "default_route_table_id": "rtb-0e5f10c1fbff00473",
            "default_security_group_id": "sg-0bc8b2c494be1e90a",
            "dhcp_options_id": "dopt-0efb748da54203519",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d8c13aae9fb659fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e5f10c1fbff00473",
            "owner_id": "000568877312",
            "tags": {
              "Name": "romlab-ecsdemo-vpc"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-vpc",
              "Project": "Terraform ECS Demo",
              "Region": "EU West",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "romlab-main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:internet-gateway/igw-00a172081786bec4e",
            "id": "igw-00a172081786bec4e",
            "owner_id": "000568877312",
            "tags": {
              "Name": "romlab-ecsdemo-igw"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-igw",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_lb",
      "name": "romlab-alb_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:loadbalancer/app/romlab-ecsdemo-alb/fc1d7daf13340c4b",
            "arn_suffix": "app/romlab-ecsdemo-alb/fc1d7daf13340c4b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "romlab-ecsdemo-alb-1443796814.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:000568877312:loadbalancer/app/romlab-ecsdemo-alb/fc1d7daf13340c4b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "romlab-ecsdemo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04ee12557027093c7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09e8606605dcb8fc0"
              },
              {
                "subnet_id": "subnet-0a3e934a8a98dda96"
              }
            ],
            "subnets": [
              "subnet-09e8606605dcb8fc0",
              "subnet-0a3e934a8a98dda96"
            ],
            "tags": {
              "Name": "romlab-ecsdemo-alb"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-alb",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-07ed1f0168326b3d4",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.network_us_east_2.aws_security_group.romlab-main_sg",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Default response",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:loadbalancer/app/romlab-ecsdemo-alb/fc1d7daf13340c4b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_lb.romlab-alb_main",
            "module.network_us_east_2.aws_security_group.romlab-main_sg",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_eu_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:targetgroup/romlab-ecsdemo-eu-tg/157cd3120d58c51b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener-rule/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733/8640eeb1bd4f1c36",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/eu*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener-rule/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733/8640eeb1bd4f1c36",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733",
            "priority": 2,
            "tags": null,
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_lb.romlab-alb_main",
            "module.network_us_east_2.aws_lb_listener.http",
            "module.network_us_east_2.aws_lb_target_group.romlab-tg_eu",
            "module.network_us_east_2.aws_security_group.romlab-main_sg",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_us_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:targetgroup/romlab-ecsdemo-us-tg/8d992c13d4c2a3d9",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener-rule/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733/0274e153cb6ccdc5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/us*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener-rule/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733/0274e153cb6ccdc5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:listener/app/romlab-ecsdemo-alb/fc1d7daf13340c4b/2240b7016ca3c733",
            "priority": 1,
            "tags": null,
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_lb.romlab-alb_main",
            "module.network_us_east_2.aws_lb_listener.http",
            "module.network_us_east_2.aws_lb_target_group.romlab-tg_us",
            "module.network_us_east_2.aws_security_group.romlab-main_sg",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "romlab-tg_eu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:targetgroup/romlab-ecsdemo-eu-tg/157cd3120d58c51b",
            "arn_suffix": "targetgroup/romlab-ecsdemo-eu-tg/157cd3120d58c51b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:000568877312:targetgroup/romlab-ecsdemo-eu-tg/157cd3120d58c51b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "romlab-ecsdemo-eu-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "romlab-tg_us",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:000568877312:targetgroup/romlab-ecsdemo-us-tg/8d992c13d4c2a3d9",
            "arn_suffix": "targetgroup/romlab-ecsdemo-us-tg/8d992c13d4c2a3d9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:000568877312:targetgroup/romlab-ecsdemo-us-tg/8d992c13d4c2a3d9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "romlab-ecsdemo-us-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_route",
      "name": "romlab-pub_subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a172081786bec4e",
            "id": "r-rtb-04c303c6efbe247031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c303c6efbe24703",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_internet_gateway.romlab-main_igw",
            "module.network_us_east_2.aws_route_table.romlab-public_rt",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00a172081786bec4e",
            "id": "r-rtb-04c303c6efbe247031080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04c303c6efbe24703",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_internet_gateway.romlab-main_igw",
            "module.network_us_east_2.aws_route_table.romlab-public_rt",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "romlab-public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:route-table/rtb-04c303c6efbe24703",
            "id": "rtb-04c303c6efbe24703",
            "owner_id": "000568877312",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "romlab-ecsdemo-public-rt"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-public-rt",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "romlab-public_rtassoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0559ea488584ec65c",
            "route_table_id": "rtb-04c303c6efbe24703",
            "subnet_id": "subnet-09e8606605dcb8fc0"
          },
          "dependencies": [
            "module.network_us_east_2.aws_route_table.romlab-public_rt",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035079812ecaa521d",
            "route_table_id": "rtb-04c303c6efbe24703",
            "subnet_id": "subnet-0a3e934a8a98dda96"
          },
          "dependencies": [
            "module.network_us_east_2.aws_route_table.romlab-public_rt",
            "module.network_us_east_2.aws_subnet.romlab-subnet-public",
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "romlab-main_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:security-group/sg-04ee12557027093c7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ee12557027093c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241212045511515400000002",
            "name_prefix": "terraform-",
            "owner_id": "000568877312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "romlab-ecsdemo-alb-sg"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-alb-sg",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "romlab-subnet-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:subnet/subnet-056eb5d3c5e10dbf6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.123.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056eb5d3c5e10dbf6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-private-0"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-private-0",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:subnet/subnet-0ec2c00833caa48d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.143.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec2c00833caa48d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-private-1"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-private-1",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "romlab-subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:subnet/subnet-09e8606605dcb8fc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e8606605dcb8fc0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-public-0"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-public-0",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:subnet/subnet-0a3e934a8a98dda96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a3e934a8a98dda96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "000568877312",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "romlab-ecsdemo-public-1"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-public-1",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            },
            "vpc_id": "vpc-07ed1f0168326b3d4"
          },
          "dependencies": [
            "module.network_us_east_2.aws_vpc.romlab-main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_us_east_2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "romlab-main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us-east-2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:000568877312:vpc/vpc-07ed1f0168326b3d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02439ae5e293494ff",
            "default_route_table_id": "rtb-056767e29ed0e1408",
            "default_security_group_id": "sg-06499fe72bd9926fa",
            "dhcp_options_id": "dopt-0ed644ef4da2bcc2b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ed1f0168326b3d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-056767e29ed0e1408",
            "owner_id": "000568877312",
            "tags": {
              "Name": "romlab-ecsdemo-vpc"
            },
            "tags_all": {
              "Name": "romlab-ecsdemo-vpc",
              "Project": "Terraform ECS Demo",
              "Region": "US East",
              "TimePeriod": "Dec2024",
              "Version": "1.0"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}